--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,15 @@
 #    pip-compile
 #
 cycler==0.10.0            # via matplotlib
-kiwisolver==1.2.0         # via matplotlib
-matplotlib==3.2.1
-numpy==1.18.5
-pandas==1.0.4
+kiwisolver==1.3.0         # via matplotlib
+matplotlib==3.3.2
+numpy==1.19.2
+pandas==1.1.3
 pyparsing==2.4.7          # via matplotlib
 python-dateutil==2.8.1    # via matplotlib, pandas
 pytz==2020.1              # via pandas
-scipy==1.4.1              # via seaborn
-seaborn==0.10.1
+scipy==1.5.2              # via seaborn
+seaborn==0.11.0
 six==1.15.0               # via cycler, python-dateutil
+statsmodels==0.12.0       # PJ manual
+
